--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@tinymce/tinymce-react": "^4.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "html-react-parser": "^4.2.2",
     "lucide-react": "^0.279.0",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "next": "latest",
     "prettier": "^3.0.3",
+    "prismjs": "^1.29.0",
     "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
@@ -39,6 +42,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "latest",
+    "@types/prismjs": "^1.26.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "autoprefixer": "latest",
